Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ Liang Tao</p>
 
 <p>Project Proposal Link: <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
 
-<p>Project Update 1 Link: <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
+<p>Project Update 1 Link (code): <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
+
+<p>Project Update 2 Link (report): <a href="https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0">https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZenithTao/HPC_Emory_Project">Hpc emory project</a> is maintained by <a href="https://github.com/ZenithTao">ZenithTao</a>.</span>
