Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section class="main-content">
       <p>Group members:</p>
 
-<p>Ziwei Guo,
-Xiaolong Zhang,
-Liang Tao</p>
+<p><strong>Ziwei Guo,</strong>
+<strong>Xiaolong Zhang,</strong>
+<strong>Liang Tao</strong></p>
 
 <p>Project Proposal Link: <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
 
