--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </section>
 
     <section class="main-content">
-      <p>Group members:</p>
+      <p><em><strong>Group members:</strong></em></p>
 
 <p><strong>Ziwei Guo,</strong>
 <strong>Xiaolong Zhang,</strong>
 <strong>Liang Tao</strong></p>
 
-<p>Project Proposal Link: <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
+<p><strong>Project Proposal Link:</strong> <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
 
-<p>Project Update 1 Link (code): <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
+<p><strong>Project Update 1 Link (code):</strong> <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
 
-<p>Project Update 2 Link (report): <a href="https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0">https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0</a></p>
+<p><strong>Project Update 2 Link (report):</strong> <a href="https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0">https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZenithTao/HPC_Emory_Project">Hpc emory project</a> is maintained by <a href="https://github.com/ZenithTao">ZenithTao</a>.</span>
