--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 <strong>Xiaolong Zhang,</strong>
 <strong>Liang Tao</strong></p>
 
-<p><strong>Project Proposal Link:</strong> <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
+<blockquote>
+<p><strong>Project Proposal Link:</strong> 
+    <a href="https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800">https://www.dropbox.com/s/fvph55406tafeu5/proposal-HPC.docx?oref=e&amp;n=418310800</a></p>
 
 <p><strong>Project Update 1 Link (code):</strong> <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
 
 <p><strong>Project Update 2 Link (report):</strong> <a href="https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0">https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0</a></p>
+</blockquote>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZenithTao/HPC_Emory_Project">Hpc emory project</a> is maintained by <a href="https://github.com/ZenithTao">ZenithTao</a>.</span>
