Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 <p><strong>Project Update 1 Link (code):</strong> <a href="https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c">https://raw.githubusercontent.com/ZenithTao/HPC_Emory_Project/gh-pages/domer.c</a></p>
 
 <p><strong>Project Update 2 Link (report):</strong> <a href="https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0">https://www.dropbox.com/s/lhpfxx4rrq3o1ee/Project_Update.docx?dl=0</a></p>
+
+<p><strong>Project final slides for the presentation:</strong> <a href="https://www.dropbox.com/s/69me815ds31pnjx/final2.0.pptx?dl=0">https://www.dropbox.com/s/69me815ds31pnjx/final2.0.pptx?dl=0</a></p>
 </blockquote>
 
       <footer class="site-footer">
