Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <p><strong>Project complete code:</strong> <a href="https://www.dropbox.com/s/fza75v754voam1e/code.zip?dl=0">https://www.dropbox.com/s/fza75v754voam1e/code.zip?dl=0</a></p>
 </blockquote>
 
+<p><strong>Project Proposal Link:</strong> <a href="https://www.dropbox.com/s/ym3hi27av6pdbpp/Final_Report_ZiweiGuo%26XiaolongZhang%26LiangTao.pdf?dl=0">https://www.dropbox.com/s/ym3hi27av6pdbpp/Final_Report_ZiweiGuo%26XiaolongZhang%26LiangTao.pdf?dl=0</a></p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ZenithTao/HPC_Emory_Project">Hpc emory project</a> is maintained by <a href="https://github.com/ZenithTao">ZenithTao</a>.</span>
 
